syntax = "proto3";

package task;

import "google/protobuf/timestamp.proto";

option go_package = "./proto/task;taskpb";

service TaskService {
    rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
    rpc GetTask (GetTaskRequest) returns (TaskResponse);
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
    rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    google.protobuf.Timestamp deadline = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    google.protobuf.Timestamp deadline = 3;
}

message GetTaskRequest {
    string id = 1;
}

message ListTasksRequest {}

message UpdateTaskRequest {
    string id = 1;
    string status = 2;
}

message DeleteTaskRequest {
    string id = 1;
}

message TaskResponse {
    Task task = 1;
}

message ListTasksResponse {
    repeated Task task = 1;
}

message DeleteTaskResponse {
    bool success = 1;
}
